# HLA-Pipeline

./: LICENSE  pyproject.toml  readme.md
src/hlapipeline/: HLAPipeline.py  LocalDatabase.py  main.py  util.py
src/hlapipeline/defrag/: defrag.py
src/hlapipeline/files/: OutputAdapter.py  PeptideFileAdapter.py  PeptideFileAdapterException.py
src/hlapipeline/gibbscluster/: gibbscluster.py  gibbscluster_old.py
test/: HLAPipelineTests.py  LocalDatabaseTests.py
test/test_files/: test1_000000_HLA_A010101_HEL_bRP_PeptideGroups.txt
test/test_output/dup_peptides/: test1_000000_HLA_A010101_HEL_bRP_dup_peptides.csv
test/test_output/fragRM_peptides/: test1_000000_HLA_A010101_HEL_bRP_fragRM_peptides.csv
test/test_output/frag_peptides/: test1_000000_HLA_A010101_HEL_bRP_frag_peptides.csv
test/test_output/spRM_peptides/: test1_000000_HLA_A010101_HEL_bRP_spRM_peptides.csv
test/test_output/sp_peptides/: test1_000000_HLA_A010101_HEL_bRP_sp_peptides.csv
