[build-system]
requires = ["setuptools>=61.0", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "hla-pipeline"
version = "1.3"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.19.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.13.2",
    "palmotif>=0.4",
    "platformdirs>=4.2.1"
]

[project.scripts]
hla-pipeline = "hlapipeline.main:main"
